  - All native events now have public copy constructors and default constructors.
  - If no date\time is specified, then dxf_events_sample is not subscribed to time series.
  - dxf_ipf_connect_sample: added an ability to set bearer token
  - Added XML documentation for all public\protected API entities (interfaces, methods, classes etc.)
  - The DayUtil class is now public

Version 8.4.1
* [DXFC-264] Added assembly and deployment of XML documentation
  Now dxf_api.xml and dxf_native.xml files come inside zip bundle. You can use them to get API documentation from the IDE.
* [DXFC-261] Fixed a bug related to leaking socket handles

Version 8.4.0
* [DXFC-258] Fixed a bug with the impossibility of receiving candledata when changing the order of candle symbol attributes
* [DXFC-260] Added the ability to retrieve TnS data from CandleWebService
  - Added the `TimeAndSaleDataConnection` class with method
  `Task<Dictionary<string, List<IDxTimeAndSale>>> GetTimeAndSaleData(List<string> symbols, DateTime fromTime, DateTime toTime, CancellationToken cancellationToken)`
  that retrieves candles by symbols and start\stop DateTime. See documentation. 
  - Add the `dxf_tns_data_retrieving_sample` that demonstrates how to use `TimeAndSaleDataConnection`
  It is possible to subscribe to regional TnS by specifying, for example, the AAPL&Q symbol. 
  In this case, the service will return composite (Scope = Composite !) TnS with the TimeAndSale (not TimeAndSale&Q) record type and the AAPL&Q symbol (like a candle)
  For such a case, the `Normalized` method has been added for the TimeAndSale, Quote, Summary events, which will return a normalized (Regional) copy of the event. See example and documentation. 

Version 8.3.0
* [DXFC-254] The amount of memory used to store the symbols required for a subscription has been reduced by several times.
* [DXFC-238] Added the ability to set PriceLevelBook symbol or orders sources. Added the new methods: