@@ -31,5 +31,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("8.4.1.0")]
-[assembly: AssemblyFileVersion("8.4.1.0")]
+[assembly: AssemblyVersion("8.5.0.0")]
+[assembly: AssemblyFileVersion("8.5.0.0")]
